# ecommerce-webscraper

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/backup/: price_history_bak.xlsx
data/processed/: price_history.xlsx
ecommerce_webscraper/: ecommerce_webscraper.py  run.bat
