[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ecommerce_webscraper"
version = "0.0.1"
description = "Sistema automatizado de coleta, armazenamento e visualiza\u00e7\u00e3o de dados de e-commerce brasileiro, utilizando t\u00e9cnicas de web scraping para monitoramento de pre\u00e7os e disponibilidade de produtos."
authors = [
  { name = "J\u00fanior" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["ecommerce_webscraper"]
include = ["pyproject.toml", "ecommerce_webscraper/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ecommerce_webscraper"]
force-sort-within-sections = true

